rework jstat parse and including gc in the jinfo